# green

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  Scene.cpp  Scene.hpp  main.cpp  utility.cpp  utility.hpp
src/input/: Input.cpp  Input.hpp
src/scenes/: SceneRipple.cpp  SceneRipple.hpp  SceneTriangle.cpp  SceneTriangle.hpp
src/shaders/: CMakeLists.txt  fragment.glsl  vertex.glsl
src/shaders/ripple/: fragment.glsl  vertex.glsl
src/shaders/triangle/: fragment.glsl  vertex.glsl
